--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,7 +7,7 @@
       <h2 class="brand">CCS</h2>
 
       <h1>
-        NOUS NE VENDONS PAS DES VOITURES.<br>
+        NOUS NE VENDONS PAS DE VOITURES.<br>
         <span>NOUS CHANGEONS LA MANIÈRE DE LES IMPORTER.</span>
       </h1>
 
@@ -94,7 +94,7 @@
       <div class="directrice__badge-line"></div>
       <div class="directrice__badge-text">
         <strong>Coumba Thioune</strong>
-        Fondatrice & Directrice
+        Fondatrice
       </div>
     </div>
   </div>
