--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -119,9 +119,9 @@
     </div>
 
     <blockquote class="directrice__quote">
-      <p>" Nous avons réuni des professionnels du contrôle automobile, de la douane et de la logistique internationale,
-        tous engagés autour d’une même mission : protéger les consommateurs et apporter de la transparence dans un
-        marché qui en manque."</p>
+      <p>" Nous avons réuni des professionnels du <strong>contrôle</strong> automobile, de <strong>la douane</strong> et de <strong>la logistique internationale </strong>,
+        tous engagés autour d’une même mission : <strong>protéger les consommateurs et apporter de la transparence dans un
+        marché qui en manque</strong>."</p>
     </blockquote>
 
     <p class="directrice__body">
@@ -365,8 +365,8 @@
                         (change)="onCheckboxChange($event, 'typeVehicule')"> Utilitaires</label>
         </div>
         <span class="error-msg" *ngIf="isInvalid('typeVehicule')">
-      Sélectionnez au moins un type
-    </span>
+          Sélectionnez au moins un type
+        </span>
       </div>
 
       <!-- Transmission -->
@@ -378,6 +378,24 @@
           <label><input type="checkbox" value="Automatique"
                         (change)="onCheckboxChange($event, 'transmission')"> Automatique</label>
         </div>
+      </div>
+
+      <!-- carburant -->
+      <div class="row">
+        <label [class.label-error]="isInvalid('typeCarburant')">Carburant souhaité</label>
+        <div class="checkbox-group">
+          <label><input type="checkbox" value="Essence"
+                        (change)="onCheckboxChange($event, 'typeCarburant')"> Essence</label>
+          <label><input type="checkbox" value="Gazoil"
+                        (change)="onCheckboxChange($event, 'typeCarburant')"> Gazoil</label>
+          <label><input type="checkbox" value="Electrique"
+                        (change)="onCheckboxChange($event, 'typeCarburant')"> Electrique</label>
+          <label><input type="checkbox" value="Hybride"
+                        (change)="onCheckboxChange($event, 'typeCarburant')"> Hybride</label>
+        </div>
+        <span class="error-msg" *ngIf="isInvalid('typeCarburant')">
+          Sélectionnez au moins un type
+        </span>
       </div>
 
       <!-- Modèle -->
@@ -400,6 +418,8 @@
         </select>
         <span class="error-msg" *ngIf="isInvalid('budget')">Veuillez choisir un budget</span>
       </div>
+
+
 
       <!-- Bouton — TON design intact, juste disabled pendant envoi -->
       <button type="submit" class="cta-btn"
